--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/purple_500"
     tools:context=".fragments.SignInFragment">
 
 
@@ -11,13 +12,13 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="88dp"
         android:fontFamily="sans-serif"
         android:text="Sign In"
-        android:textColor="@color/purple_500"
+        android:textColor="@color/white"
         android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.card.MaterialCardView
@@ -25,13 +26,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="30dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp"
         app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/textView">
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -84,11 +85,11 @@
                 android:id="@+id/passEt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingTop="15dp"
                 android:background="@color/white"
                 android:hint="@string/enter_your_pass"
                 android:inputType="textPassword"
-                android:paddingStart="12dp" />
+                android:paddingStart="12dp"
+                android:paddingTop="15dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -102,7 +103,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="12dp"
-        android:src="@drawable/philosophy"
+        android:src="@drawable/rightarrownext"
         app:layout_constraintEnd_toEndOf="@id/cardView2"
         app:layout_constraintTop_toBottomOf="@id/cardView2" />
 
@@ -111,24 +112,24 @@
         android:id="@+id/textview32"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="36dp"
         android:fontFamily="sans-serif"
-        android:text="Not Registered Yet ??"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/textViewSignUp"
+        android:text="Not Registered Yet?"
+        android:textColor="@color/white"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nextBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/nextBtn" />
 
     <TextView
         android:id="@+id/textViewSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
         android:fontFamily="sans-serif"
-        android:text=" Sign Up"
-        android:textColor="@color/darkBlue"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline3"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:text=" Sign Up Here"
+        android:textColor="@color/sky_green"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/textview32"
         app:layout_constraintTop_toTopOf="@id/textview32" />
 
@@ -137,13 +138,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="114dp" />
+        app:layout_constraintGuide_begin="122dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.80" />
+        app:layout_constraintGuide_percent="0.72" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
