--- a/app/src/main/res/layout/fragment_to_do_dialog.xml
+++ b/app/src/main/res/layout/fragment_to_do_dialog.xml
@@ -9,14 +9,15 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/oblong_shape">
 
         <ImageView
             android:id="@+id/todoClose"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_marginTop="12dp"
-            android:src="@drawable/atomphysics"
+            android:src="@drawable/delete"
             app:layout_constraintEnd_toEndOf="@+id/cardView1"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -58,7 +59,7 @@
             android:id="@+id/todoNextBtn"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/biologygene"
+            android:src="@drawable/next"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="12dp"
             app:layout_constraintTop_toBottomOf="@+id/cardView1"
