--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,6 +11,11 @@
         android:label="fragment_splash"
         tools:layout="@layout/fragment_splash">
         <action
+            android:id="@+id/action_splashFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/splashFragment"
+            app:popUpToInclusive="true" />
+        <action
             android:id="@+id/action_splashFragment_to_signInFragment"
             app:destination="@id/signInFragment"
             app:enterAnim="@anim/fade_in"
@@ -43,10 +48,24 @@
             app:destination="@id/signInFragment"
             app:popUpTo="@id/signUpFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_signUpFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/signUpFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.kodego.app.thingstodo.fragments.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
+    <dialog
+        android:id="@+id/toDoDialogFragment"
+        android:name="com.kodego.app.thingstodo.fragments.ToDoDialogFragment"
+        android:label="fragment_to_do_dialog"
+        tools:layout="@layout/fragment_to_do_dialog" >
+        <action
+            android:id="@+id/action_toDoDialogFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </dialog>
 </navigation>
