--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/myViewTaskNotification"
-    tools:context=".TaskNotification">
+    tools:context=".fragments.NotificationFragment">
 
 
     <TextView
@@ -16,7 +15,7 @@
         android:layout_marginTop="0dp"
         android:background="@color/purple_500"
         android:gravity="center"
-        android:text="@string/set_your_reminder"
+        android:text="Set your reminder"
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -32,7 +31,7 @@
             android:id="@+id/titleET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/notification_name" />
+            android:hint="Notification name" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -47,7 +46,7 @@
             android:id="@+id/messageET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/details_optional" />
+            android:hint="Details (optional)" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -100,7 +99,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
-        android:text="@string/return_to_task_list" />
+        android:text="Return to Task List" />
 
 </LinearLayout>
 
