--- a/app/src/main/res/layout/fragment_to_do_dialog.xml
+++ b/app/src/main/res/layout/fragment_to_do_dialog.xml
@@ -2,15 +2,17 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="400dp"
+    android:layout_width="410dp"
     android:layout_height="wrap_content"
+    app:cardBackgroundColor="@color/purple_500"
     tools:context=".fragments.ToDoDialogFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/oblong_shape">
+        android:background="@color/purple_500"
+        android:elevation="20dp">
 
         <ImageView
             android:id="@+id/todoClose"
@@ -23,7 +25,7 @@
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/cardView1"
-            android:layout_width="300dp"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             app:cardCornerRadius="8dp"
@@ -47,10 +49,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@color/white"
-                    android:hint="@string/type_your_task"
+                    android:hint="Format: (Subject; Details)"
                     android:inputType="textEmailAddress"
                     android:paddingStart="12dp"
-                    android:paddingTop="15dp" />
+                    android:paddingTop="15dp"
+                    android:paddingBottom="15dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
         </com.google.android.material.card.MaterialCardView>
@@ -59,12 +62,12 @@
             android:id="@+id/todoNextBtn"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/next"
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="7dp"
+            android:src="@drawable/rightarrownext"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/cardView1"
             app:layout_constraintEnd_toEndOf="@+id/cardView1"
-            android:layout_marginTop="12dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/cardView1" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
